fix: making heading smaller on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -79,6 +79,21 @@ body {
     overflow-y: scroll;
 }
 
+@utility heading--mobile-small {
+    @apply font-sans;
+    @apply font-semibold;
+    @apply text-3xl;
+    @apply text-primary-200;
+
+    @media (min-width: 700px) {
+        @apply text-6xl;
+    }
+
+    @media (min-width: 1124px) {
+        @apply text-8xl;
+    }
+}
+
 @utility heading {
     @apply font-sans;
     @apply font-semibold;
